--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "sinon": "^7.5.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "dotenv": "^8.1.0",
     "express": "^4.15.3",
+    "express-validator": "^6.2.0",
     "faker": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
     "nodemon": "^1.11.0",
     "underscore": "^1.8.3",
