--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - DB_URL=mongodb://mongo:27017/wishbox
     volumes: 
       - .:/var/www
-      - ./var/www/node_modules
+      - /var/www/node_modules
     ports:
       - "8080:3000"
     depends_on:
