Add softdelete to scehma

--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "dotenv": "^8.1.0",
-    "express": "^4.15.3",
+    "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
+    "mongoose-delete": "^0.5.1",
     "nodemon": "^1.11.0",
     "underscore": "^1.8.3",
     "winston": "^3.2.1"
