--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - NODE_ENV=development
-      - DB_URL=mongodb://mongo:27017/wishbox
+    env_file: .env
     volumes: 
       - .:/var/www
       - /var/www/node_modules
