--- a/.cicleci/config.yml
+++ b/.cicleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  build-api:
     working_directory: ~/mern-starter
     docker:
       - image: circleci/node:latest
@@ -18,7 +18,7 @@ jobs:
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - ./node_modules
+            - ./api/node_modules
       - run:
           name: test
           command: npm test
